[project]
name = "somnobot"
version = "0.1.0"
description = ""
authors = [
    {name = "Angelina Sheiko",email = "sheiko.angelina0@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = "3.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.5.4"
black = "24.8.0"
toml = "^0.10.2"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "S", "B", "A", "C4", "G", "PIE", "Q", "SIM", "ARG", "PTH", "TD", "PL", "PERF"]
ignore = ["ANN101", "PERF401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests}/*" = ["S101"]

[tool.black]
line-length = 120
